# VaxPress

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  Snakefile  gcloud-setup.sh  pixi.toml  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml
conda/icodon-light/: minimal-icodon.diff
docs/: requirements.txt
examples/example_inputs/: example-script.sh  storage_CDS.fa  storage_UTR.fa
tools/: detect_repeats.cpp  prepare-bicodon-usage.py  prepare-codon-usage.py
tools/WIP/: moo.py
vaxpress/: __init__.py  __main__.py  config.py  crossover.py  datacache.py  evolution_chamber.py  foldings.py  lineardesign.py  mutant_generator.py  presets.py  reporting.py  sequence.py  sequence_evaluator.py  vaxifold.py
vaxpress/data/: bicodon_usage_data.py  codon_table.py  codon_usage_data.py  thermodynamics.py
vaxpress/report_template/: report.html
vaxpress/scoring/: __init__.py  aup.py  bicodon.py  cai.py  degscore.py  gc_ratio.py  icodon_stability.py  idt_complexity.py  long_stems.py  loops.py  mfe.py  overall_repeats.py  remote_repeats.py  restriction_site.py  single_u.py  start_structure.py  tandem_repeats.py  ucount.py
vaxpress/utils/: remote_repeats.cpp
vaxpress/utils/moo/: crowding.cpp  crowding.h  individual.hpp  ndsort.cpp  ndsort.h  nsga2.cpp  nsga2_test
vaxpress/utils/polish/: __init__.py  __main__.py  idt_complexity.py  polish_helper.py
vaxpress/utils/scoring/: remote_repeats.cpp
